--- a/app/src/main/res/layout/activity_war_map.xml
+++ b/app/src/main/res/layout/activity_war_map.xml
@@ -7,6 +7,16 @@
     tools:context=".WarMapActivity"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textViewMove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:textColor="@color/green"
+        android:text="Your turn"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
