Added button to clear battle field

--- a/app/src/main/res/layout/activity_ship_placement.xml
+++ b/app/src/main/res/layout/activity_ship_placement.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -126,6 +127,14 @@
             android:layout_height="50dp"
             android:layout_margin="2dp"
             android:text="Continue"/>
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6750A3"
+            android:onClick="ReOpenLayout"
+            app:srcCompat="@drawable/baseline_autorenew_24" />
 
     </LinearLayout>
 
